[package]
name = "netmon-rust"
version = "0.1.0"
authors = ["jd84 <jd84@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "netmon-sys"
]

[dependencies]
netmon-sys = { path = "netmon-sys", version = "0.1.0" }